<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.me.soft.agenda.MainActivity">
    <item
        android:id="@+id/menu_config"
        android:title="@string/abc_menu_config"
        />
    <item
        android:id="@+id/menu_master_obstaculos"
        android:title="@string/abc_menu_pond_obstaculos"
        />
    <item
        android:id="@+id/menu_master_circuito"
        android:title="@string/abc_menu_pond_cirucito_transporte"
        />
    <item
        android:id="@+id/menu_master_partidores"
        android:title="@string/abc_menu_pond_partidores_pantes"
        />
    <item
        android:id="@+id/menu_master_trasiego"
        android:title="@string/abc_menu_pond_trasiego_plano"
        />
    <item
        android:id="@+id/menu_master_tiposuelo"
        android:title="@string/abc_menu_pond_tipo_suelo"
        />
    <item
        android:id="@+id/menu_master_cantidadpiedra"
        android:title="@string/abc_menu_pond_cantidad_piedra"
        />
    <item
        android:id="@+id/menu_master_porcentaje"
        android:title="@string/abc_menu_pond_porcentaje"
        />
    <item
        android:id="@+id/menu_master_clasificacion"
        android:title="@string/abc_menu_pond_clasificacion"
        />
    <item
        android:id="@+id/menu_master_finca"
        android:title="@string/abc_menu_listado_fincas"
        />
    <item
        android:id="@+id/menu_master_ponderacion_tons_surco"
        android:title="@string/abc_menu_listado_pond_tons_surco"
        />
</menu>
